--- a/Modulos_Python_para_Analise_de_Dados_Numpy.ipynb
+++ b/Modulos_Python_para_Analise_de_Dados_Numpy.ipynb
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "ee94a141",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
        "array([ 0,  1,  3,  6, 10, 15, 21, 28, 36])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "74d64778",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "54072c8e",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "58edc4ca",
    "metadata": {},
    "outputs": [
@@ -316,7 +316,7 @@
        "list"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "f3d2c379",
    "metadata": {},
    "outputs": [
@@ -337,7 +337,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "258964ab",
    "metadata": {},
    "outputs": [
@@ -401,21 +401,663 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "b393d72e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Verificando o formato do array\n",
+    "print(vetor1.shape)\n",
+    "# 9, vetor de apenas uma dimensão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65c99bc0",
+   "metadata": {},
+   "source": [
+    "## Funções NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "c78503cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Parei no 07:25"
+    "# A função arange cria um vetor contendo uma progressão aritmética a partir de um intervalo - start, stop, step\n",
+    "vetor2 = np.arange(0.,4.5,.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c0624678",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.  0.5 1.  1.5 2.  2.5 3.  3.5 4. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vetor2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a16cf6b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificando o tipo do objeto\n",
+    "type(vetor2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6d56a389",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9,)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# formato do array\n",
+    "np.shape(vetor2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "897e5862",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(vetor2.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0f117ec4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.   1.25 1.5  1.75 2.   2.25 2.5  2.75 3.   3.25 3.5  3.75 4.   4.25\n",
+      " 4.5  4.75 5.   5.25 5.5  5.75 6.   6.25 6.5  6.75 7.   7.25 7.5  7.75\n",
+      " 8.   8.25 8.5  8.75 9.   9.25 9.5  9.75]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(1,10,0.25)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0469ef05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.zeros(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "0cf4a01e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Retorna 1 na posições em diagonal e 0 no restante\n",
+    "z = np.eye(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5829fcc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "05a4c197",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Os Valores passados como parâmetro, formam uma diagonal\n",
+    "d = np.diag(np.array([1,2,3,4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "522d739d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0, 0],\n",
+       "       [0, 2, 0, 0],\n",
+       "       [0, 0, 3, 0],\n",
+       "       [0, 0, 0, 4]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "130908fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Array de números complexos\n",
+    "c = np.array([1+2j, 3+4j, 5+6j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a6166dae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.+2.j, 3.+4.j, 5.+6.j])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6296aab1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# array de valores booleanos\n",
+    "b = np.array([True, False, False, True])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "23ac323d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ True, False, False,  True])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "81589524",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Array de Strings\n",
+    "s = np.array(['Python','R','Julia'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c437464f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Python', 'R', 'Julia'], dtype='<U6')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "8203359b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.20408163,  0.40816327,  0.6122449 ,  0.81632653,\n",
+       "        1.02040816,  1.2244898 ,  1.42857143,  1.63265306,  1.83673469,\n",
+       "        2.04081633,  2.24489796,  2.44897959,  2.65306122,  2.85714286,\n",
+       "        3.06122449,  3.26530612,  3.46938776,  3.67346939,  3.87755102,\n",
+       "        4.08163265,  4.28571429,  4.48979592,  4.69387755,  4.89795918,\n",
+       "        5.10204082,  5.30612245,  5.51020408,  5.71428571,  5.91836735,\n",
+       "        6.12244898,  6.32653061,  6.53061224,  6.73469388,  6.93877551,\n",
+       "        7.14285714,  7.34693878,  7.55102041,  7.75510204,  7.95918367,\n",
+       "        8.16326531,  8.36734694,  8.57142857,  8.7755102 ,  8.97959184,\n",
+       "        9.18367347,  9.3877551 ,  9.59183673,  9.79591837, 10.        ])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# o método linspace(linear spaced vector) retorna um número de \n",
+    "# valores igualmente distribuídos no intervalo especificado\n",
+    "np.linspace(0,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "7207de4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.          0.71428571  1.42857143  2.14285714  2.85714286  3.57142857\n",
+      "  4.28571429  5.          5.71428571  6.42857143  7.14285714  7.85714286\n",
+      "  8.57142857  9.28571429 10.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.linspace(0,10,15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7b0b3413",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.00000000e+00 3.59381366e+00 1.29154967e+01 4.64158883e+01\n",
+      " 1.66810054e+02 5.99484250e+02 2.15443469e+03 7.74263683e+03\n",
+      " 2.78255940e+04 1.00000000e+05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.logspace(0,5,10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abfb3519",
+   "metadata": {},
+   "source": [
+    "## Criando Matrizes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "02a390c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando uma Matriz\n",
+    "matriz = np.array([[1,2,3],[4,5,6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "39bf38eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matriz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "76a2d820",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matriz.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "de8d41f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando uma matriz 2x3 apenas com número \"1\"\n",
+    "matriz1 = np.ones((2,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d0c58ab8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1.]\n",
+      " [1. 1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matriz1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "f4cd38e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Criando uma matriz a partir de uma lista de listas\n",
+    "lista = [[13,81,22],[0,34,59],[21,48,94]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "050192b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# a função matrix cria uma matriz a partir de um sequência\n",
+    "matriz2 = np.matrix(lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5ede5e2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[13, 81, 22],\n",
+       "        [ 0, 34, 59],\n",
+       "        [21, 48, 94]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "26455388",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.matrix"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(matriz2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "2f286e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Formanto da matriz\n",
+    "np.shape(matriz2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "43289365",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz2.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "efa6e547",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(matriz2.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1de50478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz2.itemsize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "53a32f89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "72"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matriz2.nbytes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ace7e546",
+   "id": "b036e528",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "07:56"
+   ]
   }
  ],
  "metadata": {
