--- a/bokeh.ipynb
+++ b/bokeh.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "07bdf7ef",
    "metadata": {},
    "outputs": [],
@@ -624,16 +624,168 @@
     "from bokeh.plotting import figure, show, output_file\n",
     "from bokeh.sampledata.iris import flowers\n",
     "\n",
-    "colormap = {'setosa': 'red': 'versicolor': 'green': 'virginica': 'blue'}\n",
-    "colors = [colormap[x] for x is flowers[species]]\n",
+    "colormap = {'setosa': 'red', 'versicolor': 'green', 'virginica': 'blue'}\n",
+    "colors = [colormap[x] for x in flowers['species']]\n",
     "\n",
-    "p = figure[title = \"Iris Morphology\"]\n",
+    "p = figure(title = \"Iris Morphology\")\n",
     "p.xaxis.axis_label = 'Petal Length'\n",
     "p.yaxis.axis_label = 'Petal Width'\n",
     "\n",
-    "p.circle(flowers[\"petal_length\"], flowers[\"petal_width\"])\n",
+    "p.circle(flowers[\"petal_length\"], flowers[\"petal_width\"], color=colors, fill_alpha=0.2, size=10)\n",
     "\n",
-    "# 03:21"
+    "output_file(\"Bokeh_grafico_Iris.html\", title=\"iris.py example\")\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "002d6ac9",
+   "metadata": {},
+   "source": [
+    "## Gráfico de Círculos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e5c82bcc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.plotting import figure, output_file, show\n",
+    "\n",
+    "# Output\n",
+    "output_file(\"Bokeh-Grafico-Circulos.html\")\n",
+    "\n",
+    "p = figure(plot_width = 400, plot_height = 400)\n",
+    "\n",
+    "# Adicionando círculos ao gráfico\n",
+    "p.circle([1, 2, 3, 4, 5], [6, 7, 2, 4, 5], size = 20, color = \"navy\", alpha= 0.5)\n",
+    "\n",
+    "# Mostrando o resultado\n",
+    "    \n",
+    "show(p)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b63f1e3",
+   "metadata": {},
+   "source": [
+    "## Gráfico com Dados Geofísicos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ca7ca645",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Geojson\n",
+    "\n",
+    "from bokeh.io import output_file, show\n",
+    "from bokeh.models import GeoJSONDataSource\n",
+    "from bokeh.plotting import figure\n",
+    "from bokeh.sampledata.sample_geojson import geojson\n",
+    "\n",
+    "geo_source = GeoJSONDataSource(geojson= geojson)\n",
+    "\n",
+    "p = figure()\n",
+    "p.circle(x = 'x', y = 'y', alpha = 0.9, source = geo_source)\n",
+    "output_file(\"Bokeh-GeoJSON.html\")\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0974b481",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating /home/leonardo/.bokeh directory\n",
+      "Creating /home/leonardo/.bokeh/data directory\n",
+      "Using data directory: /home/leonardo/.bokeh/data\n",
+      "Downloading: CGM.csv (1589982 bytes)\n",
+      "   1589982 [100.00%]\n",
+      "Downloading: US_Counties.zip (3171836 bytes)\n",
+      "   3171836 [100.00%]\n",
+      "Unpacking: US_Counties.csv\n",
+      "Downloading: us_cities.json (713565 bytes)\n",
+      "    713565 [100.00%]\n",
+      "Downloading: unemployment09.csv (253301 bytes)\n",
+      "    253301 [100.00%]\n",
+      "Downloading: AAPL.csv (166698 bytes)\n",
+      "    166698 [100.00%]\n",
+      "Downloading: FB.csv (9706 bytes)\n",
+      "      9706 [100.00%]\n",
+      "Downloading: GOOG.csv (113894 bytes)\n",
+      "    113894 [100.00%]\n",
+      "Downloading: IBM.csv (165625 bytes)\n",
+      "    165625 [100.00%]\n",
+      "Downloading: MSFT.csv (161614 bytes)\n",
+      "    161614 [100.00%]\n",
+      "Downloading: WPP2012_SA_DB03_POPULATION_QUINQUENNIAL.zip (4816256 bytes)\n",
+      "   4816256 [100.00%]\n",
+      "Unpacking: WPP2012_SA_DB03_POPULATION_QUINQUENNIAL.csv\n",
+      "Downloading: gapminder_fertility.csv (64346 bytes)\n",
+      "     64346 [100.00%]\n",
+      "Downloading: gapminder_population.csv (94509 bytes)\n",
+      "     94509 [100.00%]\n",
+      "Downloading: gapminder_life_expectancy.csv (73243 bytes)\n",
+      "     73243 [100.00%]\n",
+      "Downloading: gapminder_regions.csv (7781 bytes)\n",
+      "      7781 [100.00%]\n",
+      "Downloading: world_cities.zip (645274 bytes)\n",
+      "    645274 [100.00%]\n",
+      "Unpacking: world_cities.csv\n",
+      "Downloading: airports.json (6373 bytes)\n",
+      "      6373 [100.00%]\n",
+      "Downloading: movies.db.zip (5053420 bytes)\n",
+      "   5053420 [100.00%]\n",
+      "Unpacking: movies.db\n",
+      "Downloading: airports.csv (203190 bytes)\n",
+      "    203190 [100.00%]\n",
+      "Downloading: routes.csv (377280 bytes)\n",
+      "    377280 [100.00%]\n",
+      "Downloading: haarcascade_frontalface_default.xml (930127 bytes)\n",
+      "    930127 [100.00%]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Baixando o diretório de dados exemplo do Bokeh\n",
+    "import bokeh.sampledata\n",
+    "\n",
+    "bokeh.sampledata.download()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3391339e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bokeh.io import show\n",
+    "from bokeh.models import (ColumnDataSource, HoverTool, LogColorMapper)\n",
+    "from bokeh.palettes import Viridis6 as palette\n",
+    "from bokeh.plotting import figure\n",
+    "from bokeh.sampledata.us_counties import data as counties\n",
+    "from bokeh.sampledata.unemployment impor data as unemployment\n",
+    "\n",
+    "palette.reverse()\n",
+    "\n",
+    "counties = {code: county for code, county in counties.items() if county[\"state\"] == \"tx\" }\n",
+    "\n",
+    "county\n",
+    "\n",
+    "#05"
    ]
   }
  ],
