--- a/bokeh.ipynb
+++ b/bokeh.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002d6ac9",
+   "id": "b3146683",
    "metadata": {},
    "source": [
     "## Gráfico de Círculos"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e5c82bcc",
+   "id": "dbfd4403",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b63f1e3",
+   "id": "3ff54900",
    "metadata": {},
    "source": [
     "## Gráfico com Dados Geofísicos"
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ca7ca645",
+   "id": "169fd8f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,8 +700,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0974b481",
+   "execution_count": 16,
+   "id": "379f23bf",
    "metadata": {},
    "outputs": [
     {
@@ -767,26 +767,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3391339e",
+   "execution_count": 17,
+   "id": "12cb5553",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'reverse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-da22532a07e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mpalette\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mcounties\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounty\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcounty\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcounties\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcounty\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"state\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"tx\"\u001b[0m \u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'reverse'"
+     ]
+    }
+   ],
    "source": [
     "from bokeh.io import show\n",
     "from bokeh.models import (ColumnDataSource, HoverTool, LogColorMapper)\n",
     "from bokeh.palettes import Viridis6 as palette\n",
     "from bokeh.plotting import figure\n",
     "from bokeh.sampledata.us_counties import data as counties\n",
-    "from bokeh.sampledata.unemployment impor data as unemployment\n",
+    "from bokeh.sampledata.unemployment import data as unemployment\n",
+    "\n",
     "\n",
     "palette.reverse()\n",
     "\n",
     "counties = {code: county for code, county in counties.items() if county[\"state\"] == \"tx\" }\n",
     "\n",
-    "county\n",
+    "#county_xs = [county[\"lons\"] for county in counties.values()]\n",
+    "#county_ys = [county[\"lats\"] for county in counties.values()]\n",
     "\n",
-    "#05"
+    "#county_names = [county['name'] for county in counties.values()]\n",
+    "#county_rates = [unemployment[county_id] for county_id in counties]\n",
+    "#color_mapper = LogColorMapper(palette=palette)\n",
+    "\n",
+    "#source = ColumnDataSource(data=dict(\n",
+    " #   x=county_xs,\n",
+    " #   y=county_ys,\n",
+    " #   name=county_names,\n",
+    "#    rate=county_rates\n",
+    "#))\n",
+    "\n",
+    "#TOOLS = \"pan,wheel_zoom,reset,hover,save\"\n",
+    "\n",
+    "#005:17"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44febec6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
