Finalizando o bokeh, StatsModel e Seaborn

--- a/bokeh.ipynb
+++ b/bokeh.ipynb
@@ -767,22 +767,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "12cb5553",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'tuple' object has no attribute 'reverse'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-da22532a07e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mpalette\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mcounties\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0mcode\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounty\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcounty\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcounties\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcounty\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"state\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"tx\"\u001b[0m \u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'reverse'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from bokeh.io import show\n",
     "from bokeh.models import (ColumnDataSource, HoverTool, LogColorMapper)\n",
@@ -796,29 +784,55 @@
     "\n",
     "counties = {code: county for code, county in counties.items() if county[\"state\"] == \"tx\" }\n",
     "\n",
-    "#county_xs = [county[\"lons\"] for county in counties.values()]\n",
-    "#county_ys = [county[\"lats\"] for county in counties.values()]\n",
+    "county_xs = [county[\"lons\"] for county in counties.values()]\n",
+    "county_ys = [county[\"lats\"] for county in counties.values()]\n",
     "\n",
-    "#county_names = [county['name'] for county in counties.values()]\n",
-    "#county_rates = [unemployment[county_id] for county_id in counties]\n",
-    "#color_mapper = LogColorMapper(palette=palette)\n",
+    "county_names = [county['name'] for county in counties.values()]\n",
+    "county_rates = [unemployment[county_id] for county_id in counties]\n",
+    "color_mapper = LogColorMapper(palette=palette)\n",
     "\n",
-    "#source = ColumnDataSource(data=dict(\n",
-    " #   x=county_xs,\n",
-    " #   y=county_ys,\n",
-    " #   name=county_names,\n",
-    "#    rate=county_rates\n",
-    "#))\n",
+    "source = ColumnDataSource(data=dict(\n",
+    "   x=county_xs,\n",
+    "   y=county_ys,\n",
+    "   name=county_names,\n",
+    "   rate=county_rates\n",
+    "))\n",
     "\n",
-    "#TOOLS = \"pan,wheel_zoom,reset,hover,save\"\n",
+    "TOOLS = \"pan,wheel_zoom,reset,hover,save\"\n",
     "\n",
-    "#005:17"
+    "p = figure(\n",
+    "    title=\"Texas Unemployment, 2009\", tools=TOOLS,\n",
+    "    x_axis_location=None, y_axis_locatiion=None\n",
+    ")\n",
+    "p.grid.grid_line_color = None\n",
+    "\n",
+    "p.patches('x','y', source=source,\n",
+    "          fill_color={'field': 'rate', 'transform': color_mapper},\n",
+    "          fill_alpha=0.7, line_color=\"white\", line_width=0.5)\n",
+    "\n",
+    "hover = p.select_one(HoverTool)\n",
+    "hover.point_policy = \"follow_mouse\"\n",
+    "hover.tooltips=[\n",
+    "    (\"Name\", \"@name\"),\n",
+    "    (\"Unemploymet rate)\", \"@rate%\"),\n",
+    "    (\"(Long, Lat)\", \"($x, $y\"),\n",
+    "]\n",
+    "\n",
+    "show(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd4877e3",
+   "metadata": {},
+   "source": [
+    "## Fim"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44febec6",
+   "id": "5687382d",
    "metadata": {},
    "outputs": [],
    "source": []
